# Learning-notes

./: .gitignore  README.md
.obsidian/: community-plugins.json  graph.json  workspace.json
软件/C++/: Effective C++.md  vscode配置调试环境.md
软件/C++/code/imgui_sdl_vulkan/: CMakeLists.txt  main.cpp
软件/Linux/: Linux开机自启动应用.md  树莓派VNC远程桌面连接（简单记录）.md  立创泰山派rk3566.md
软件/图形学/: ImGui + stl_reader + OpenGL 加载模型.md  OpenGL.md
软件/图形学/code/: .clang-format  cmakelists.txt  log.h  main.cpp
